--- a/thehive-templates/Urlscan_io_Search_0_1_0/long.html
+++ b/thehive-templates/Urlscan_io_Search_0_1_0/long.html
@@ -8,18 +8,28 @@
     </div>
     <div class="panel-body">
         <table class="table table-hover">
-            <tr>
-                <th>URL</th>
-                <th>Result</th>
-                <th>Time</th>
-            </tr>
             <tr ng-repeat="r in content.indicator.results | limitTo:results_limit | orderBy:'-task.time'">
-                <td>{{r.page.url | ellipsis:40}}</td>
-                <td>
-                    <a href="https://urlscan.io/result/{{r._id}}" target="_blank">https://urlscan.io/result/{{r._id}}</a>
-                </td>
-                <td>{{r.task.time}}</td>
-            </tr>
+				<td>
+					<table class="table table-hover">
+                        <tr>
+                            <th>URL</th>
+                            <th>Result</th>
+                            <th>Time</th>
+                        </tr>
+						<tr>
+							<td>{{r.page.url | ellipsis:40}}</td>
+							<td>
+								<a href="https://urlscan.io/result/{{r._id}}" target="_blank">https://urlscan.io/result/{{r._id}}</a>
+							</td>
+							<td>{{r.task.time}}</td>
+						</tr>
+						<tr>
+							<td colspan="3" style=text-align:center>
+								<a href="https://urlscan.io/screenshots/{{r._id}}.png"><img src="https://urlscan.io/thumbs/{{r._id}}.png"></a>
+							</td>
+						</tr>
+					</table>
+				</td>
         </table>
     </div>
 </div>
