--- a/thehive-templates/SophosIntelix_Submit_Static_0_1/long.html
+++ b/thehive-templates/SophosIntelix_Submit_Static_0_1/long.html
@@ -68,6 +68,85 @@
          </tr>
       </table>
    </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis.versioninfo">
+      <div class="panel-heading">
+         <strong>Version Info</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>Legal Copyright</th>
+            <th>Internal Name</th>
+            <th>File Version</th>
+            <th>Special Build</th>
+            <th>Company Name</th>
+            <th>Legal Trademarks</th>
+            <th>Comments</th>
+            <th>Product Name</th>
+            <th>File Description</th>
+            <th>Product Version</th>
+            <th>Private Build</th>
+            <th>Original Filename</th>
+         </tr>
+         <tr>
+            <td>{{content.pe_analysis.versioninfo.legalcopyright}}</td>
+            <td>{{content.pe_analysis.versioninfo.internalname}}</td>
+            <td>{{content.pe_analysis.versioninfo.fileversion}}</td>
+            <td>{{content.pe_analysis.versioninfo.specialbuild}}</td>
+            <td>{{content.pe_analysis.versioninfo.companyname}}</td>
+            <td>{{content.pe_analysis.versioninfo.legaltrademarks}}</td>
+            <td>{{content.pe_analysis.versioninfo.comments}}</td>
+            <td>{{content.pe_analysis.versioninfo.productname}}</td>
+            <td>{{content.pe_analysis.versioninfo.filedescription}}</td>
+            <td>{{content.pe_analysis.versioninfo.productversion}}</td>
+            <td>{{content.pe_analysis.versioninfo.privatebuild}}</td>
+            <td>{{content.pe_analysis.versioninfo.originalfilename}}</td>
+         </tr>
+      </table>
+   </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis.digisig">
+      <div class="panel-heading">
+         <strong>Digital Signature</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>Signing Date</th>
+            <th>Signer</th>
+            <th>Verfified</th>
+            <th>Certificate Source</th>
+            <th>Timestamp</th>
+            <th>Time Signer</th>
+         </tr>
+         <tr>
+            <td>{{content.pe_analysis.digisig.signing_date}}</td>
+            <td>{{content.pe_analysis.digisig.signer | json}}</td>
+            <td>{{content.pe_analysis.digisig.verified}}</td>
+            <td>{{content.pe_analysis.digisig.certificate_source}}</td>
+            <td>{{content.pe_analysis.digisig.timescert.timestamp}}</td>
+            <td>{{content.pe_analysis.digisig.timescert.timesigner | json}}</td>
+         </tr>
+      </table>
+   </div>
+   <div class="panel panel-info" ng-if="::content.ml_file.analyses.genetic_analysis.neighbor_info">
+      <div class="panel-heading">
+         <strong>ML File Analysis - Genetic Analysis - Neighbor Info</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>SHA 265</th>
+            <th>Is Malware</th>
+            <th>Score</th>
+            <th>Match Percentage</th>
+            <th>File Path</th>
+         </tr>
+         <tr ng-repeat="(key, neighbor) in content.ml_file.analyses.genetic_analysis.neighbor_info | limitTo:table_limit">
+            <td><a href=https://www.virustotal.com/gui/file/{{key}}/detection target="_blank">{{key}}</a></td>
+            <td>{{neighbor.is_malware}}</td>
+            <td>{{neighbor.score}}</td>
+            <td>{{neighbor.match_percentage}}</td>
+            <td>{{neighbor.filepath}}</td>
+         </tr>
+      </table>
+   </div>
    <div class="panel panel-info" ng-if="::content.ml_file">
       <div class="panel-heading">
          <strong>ML File Analysis - Analyzed Counts</strong>
@@ -146,27 +225,6 @@
          </tr>
       </table>
    </div>
-   <div class="panel panel-info" ng-if="::content.ml_file.analyses.genetic_analysis.neighbor_info">
-      <div class="panel-heading">
-         <strong>ML File Analysis - Genetic Analysis - Neighbor Info</strong>
-      </div>
-      <table class="table table-hover">
-         <tr>
-            <th>SHA 265</th>
-            <th>Is Malware</th>
-            <th>Score</th>
-            <th>Match Percentage</th>
-            <th>File Path</th>
-         </tr>
-         <tr ng-repeat="(key, neighbor) in content.ml_file.analyses.genetic_analysis.neighbor_info | limitTo:table_limit">
-            <td><a href=https://www.virustotal.com/gui/file/{{key}}/detection target="_blank">{{key}}</a></td>
-            <td>{{neighbor.is_malware}}</td>
-            <td>{{neighbor.score}}</td>
-            <td>{{neighbor.match_percentage}}</td>
-            <td>{{neighbor.filepath}}</td>
-         </tr>
-      </table>
-   </div>
    <div class="panel panel-info" ng-if="::content.ml_file.analyses.black_box">
       <div class="panel-heading">
          <strong>ML File Analysis - Black Box</strong>
@@ -223,5 +281,123 @@
          </tr>
       </table>
       </br>
+   </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis">
+      <div class="panel-heading">
+         <strong>PE Analysis</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>Subsystem</th>
+            <th>Number of Sections</th>
+            <th>File Size</th>
+            <th>Imagebase</th>
+            <th>PDB String</th>
+         </tr>
+         <tr>
+            <td>{{content.pe_analysis.subsystem}}</td>
+            <td>{{content.pe_analysis.numberofsections}}</td>
+            <td>{{content.pe_analysis.filesize}}</td>
+            <td>{{content.pe_analysis.imagebase}}</td>
+            <td>{{content.pe_analysis.pdbstring}}</td>
+         </tr>
+      </table>
+   </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis.sections">
+      <div class="panel-heading">
+         <strong>PE Analysis - Sections</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>Number</th>
+            <th>Name</th>
+            <th>Size of Raw Data</th>
+            <th>Entropy</th>
+            <th>Virtual Size</th>
+            <th>Virtual Address</th>
+            <th>Physical Address</th>
+            <th>Characteristics</th>
+         </tr>
+         <tr ng-repeat="section in content.pe_analysis.sections | limitTo:table_limit">
+            <td>{{section.number}}</td>
+            <td>{{section.name}}</td>
+            <td>{{section.sizeofrawdata}}</td>
+            <td>{{section.entropy}}</td>
+            <td>{{section.virtualsize}}</td>
+            <td>{{section.virtualaddress}}</td>
+            <td>{{section.physicaladdress}}</td>
+            <td>{{section.characteristics | json}}</td>
+         </tr>
+      </table>
+   </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis">
+      <div class="panel-heading">
+         <strong>PE Analysis - PE Flags</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>Machine ID</th>
+            <th>Timestamp</th>
+            <th>Languages</th>
+            <th>PE Flags</th>
+         </tr>
+         <tr>
+            <td>{{content.pe_analysis.machineid}}</td>
+            <td>{{content.pe_analysis.timedate}}</td>
+            <td>{{content.pe_analysis.languages | json}}</td>
+            <td>{{content.pe_analysis.peflags}}</td>
+         </tr>
+      </table>
+   </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis.export.dllname">
+      <div class="panel-heading">
+         <strong>PE Analysis - Export</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>DLL Name</th>
+            <th>APIs</th>
+         </tr>
+         <tr>
+            <td>{{content.pe_analysis.export.dllname}}</td>
+            <td>{{content.pe_analysis.export.apis}}</td>
+         </tr>
+      </table>
+   </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis.import">
+      <div class="panel-heading">
+         <strong>PE Analysis - Imports</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>DLL Name</th>
+            <th>Import By Ordinal</th>
+            <th>APIs</th>
+         </tr>
+         <tr ng-repeat="dll in content.pe_analysis.import | limitTo:table_limit">
+            <td>{{dll.dllname}}</td>
+            <td>{{dll.importbyordinal}}</td>
+            <td>{{dll.apis | json}}</td>
+         </tr>
+      </table>
+   </div>
+   <div class="panel panel-info" ng-if="::content.pe_analysis.resources">
+      <div class="panel-heading">
+         <strong>PE Analysis - Resources</strong>
+      </div>
+      <table class="table table-hover">
+         <tr>
+            <th>Codepage</th>
+            <th>Type</th>
+            <th>Language</th>
+            <th>Size</th>
+         </tr>
+         <tr ng-repeat="resource in content.pe_analysis.resources | limitTo:table_limit">
+            <td>{{resource.codepage}}</td>
+            <td>{{resource.type}}</td>
+            <td>{{resource.language}}</td>
+            <td>{{resource.size}}</td>
+         </tr>
+      </table>
    </div>
 </div>
